fix list show on mobile

--- a/css/style.styl
+++ b/css/style.styl
@@ -342,17 +342,17 @@ footer
                 padding 0
                 &:hover
                     background $colorGray
-                &#list
-                    display block
-                    position absolute
-                    right $sizeMargin
-                    top 0
-                    height $sizeHeaderHeight
-                    width $sizeHeaderHeight
-                    background url($imgList) no-repeat center center
-                    opacity $opacity
-                    &:hover
-                        opacity 1
+        a#list
+            display block
+            position absolute
+            right $sizeMargin
+            top 0
+            height $sizeHeaderHeight
+            width $sizeHeaderHeight
+            background url($imgList) no-repeat center center
+            opacity $opacity
+            &:hover
+                opacity 1
     section dl dd 
         min-width $sizeMinWidth
         a 
